crear funcion de encriptacion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <li class="medio">
                     <img class="flecha" src="Imagenes/flechaGif.gif">
-                    <button class="botonencriptar">Encriptar</button>
+                    <button class="botonencriptar" onclick="encribtar();">Encriptar</button>
                 </li>
 
                 <li>
