--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </li>
 
                 <li class="medio">
-                    <img class="flecha" src="Imagenes/flechaGif.gif">
-                    <button class="botonencriptar" onclick="encribtar();">Encriptar</button>
+                    <button id="botonDesencriptar" onclick="desencriptar();">Desencriptar</button>
+                    <button id="botonencriptar" onclick="encriptar();">Encriptar</button>
                 </li>
 
                 <li>
